# OS

./: .gitignore  CMakeLists.txt  Instructions.txt  README.md  Readme.md  boot.S  check.py  debug.sh  gdb_commands.txt  kernel.cpp  kernel.elf  kernel.s  linker.ld  process.cpp  process.h  run.sh  setup.sh  test.c  uart.cpp  uart.h  vm.proc
New/: .gitignore  CMakeLists.txt  debug.sh
New/src/: kmain.c
New/src/hal/: hal_console.c  hal_console.h
apps/hello/: build_app.sh  hello_app.c  hello_app.ld  vectors.s
src/: boot.s  fault.c  jump_trampoline.s  keyboard.c  keyboard.h  kmain.c  linker.ld  pmm.c  pmm.h  proc.c  proc.h  semihost.c  semihost.h  shell.c  swap.c  syscalls.c
src/drivers/: driver.c  driver.h
src/hal/: hal_console.c  hal_console.h
src/libuser/: user_syscalls.c
tools/: pack_app  pack_app.c
